--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,8 @@
 {
   "env": {
     "browser": true,
-    "es6": true
-  },
-  "parser": "babel-eslint",
-  "extends": ["plugin:react/recommended", "airbnb"],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
+    "es6": true,
+    "jest": true
   },
   "parserOptions": {
     "ecmaFeatures": {
@@ -16,18 +11,14 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
+  "extends": ["airbnb", "plugin:react/recommended"],
   "plugins": ["react"],
   "rules": {
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "import/no-unresolved": "off",
     "no-shadow": "off",
     "arrow-parens": ["error", "as-needed"],
-    "comma-dangle": ["error", "never"],
-    "implicit-arrow-linebreak": "off",
-    "no-confusing-arrow": "off",
-    "operator-linebreak": "off",
-    "object-curly-newline": "off",
-    "template-curly-spacing": "off",
-    "indent": "off"
+    "camelcase": "off",
+    "import/no-named-as-default": "off" 
   }
 }
